--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
     <div class="one">
         
-        <img src="../Course Project/Asset/Computer Animation image.jpg" alt="Anime image">
+        <img src="Asset" alt="Anime image">
      <div class="two"> 
       <h1 class="head">Animation</h1><br>
       <p class="para1"> In 3D animation, specifically, characters and environments are three-dimensional. Animators use pixels and work to give objects weight and timing. And sometimes, animators scan real-world physical objects to create blueprints</p><br>
