--- a/index.html
+++ b/index.html
@@ -274,13 +274,13 @@
 
       <div class="main">
         <div >
-          <img src="../Course Project/Asset/Naruto season1 image.jpg" alt="image"  ><br>
+          <img src="Asset/Naruto season1 image.jpg" alt="image"  ><br>
           <h2 class="naruto">Naruto</h2><br>
           <p class="Paragraph3">Introduced as a 12-year-old orphan boy with blond, spiky hair and blue eyes, Naruto Uzumaki graduates as a ninja from Konohagakure while bonding with his teacher, Iruka Umino. Naruto seeks attention as he was ridiculed during his childhood. </p><br>
          <h2> <a href="https://anime-world.co/series/naruto/" class="link">Anime Link</a></h2>
             </div>
             <div>
-                <img src="../Course Project/Asset/Naruto shippuden image.jpg" alt="image"  >
+                <img src="Asset/Naruto shippuden image.jpg" alt="image"  >
                 <h2>Naruto Shipuden</h2>
                 <p class="para2"> Naruto Uzumaki wants to be the best ninja in the land. He's done well so far, but with the looming danger posed by the mysterious Akatsuki organization, Naruto knows he must train harder than ever and leaves his village for intense exercise.</p><br>
                <h2> <a href="https://anime-world.co/series/naruto-shippuden/" class="link">Anime Link</a></h2>
@@ -288,7 +288,7 @@
            
 
             <div>
-                <img src="../Course Project/Asset/Solo leveling image.jpg" alt="image"  >
+                <img src="Asset/Solo leveling image.jpg" alt="image"  >
                 <h2>Solo Leveling</h2>
                 <p class="para2"> In "Solo Leveling," the weakest hunter, Sung Jin-woo, gains the ability to level up after a near-death experience in a dangerous dungeon, becoming a powerful.in-woo's journey is marked by his growth in strength and his determination Exist.</p><br>
                <h2><a href="https://anime-world.co/series/solo-leveling/" class="link"> Anime Link</a></h2> 
@@ -297,7 +297,7 @@
 
   <div class="point">
     <div >
-        <img src="../Course Project/Asset/Jujutsu kaisen image.jpg" alt="image"><br>
+        <img src="Asset/Jujutsu kaisen image.jpg" alt="image"><br>
         <h2 class="naruto">Jujutsu Kaisen</h2><br>
         <p class="paragraph2" > In Jujutsu Kaisen, Yuji Itadori, a seemingly ordinary teenager, becomes entangled in a world of cursed spirits and powerful sorcerers when he swallows a cursed talisman, the finger of the demon Sukuna, to save his friends </p><br>
        <h2> <a href="https://anime-world.co/series/jujutsu-kaisen/" class="link">Anime Link</a></h2>
