--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime Page</title>
     <link rel="icon" href="Anime icon image.jpg">
 
     <style>
+        /* for tablets */
+        @media (max-width: 1024px) {
+  body {
+    background-color: #dceefc;
+    font-size: 16px;
+    padding: 30px;
+  }
+}
+ /* Phones (up to 767px) */
+@media (max-width: 767px) {
+  body {
+    background-color: #e0ffe0;
+    font-size: 14px;
+    padding: 20px;
+  }
         body{
             margin: 20px;
         }
