--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="icon" href="Anime icon image.jpg">
 
     <style>
+        /* Default styles (for laptops and desktops) */
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+  font-size: 18px;
+  padding: 40px;
+}
         /* for tablets */
         @media (max-width: 1024px) {
   body {
